--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -1,13 +1,14 @@
 <ion-content padding>
   <ion-grid>
     <div>
-      <h1 text-center>PLEASE PICK A DATE</h1>
-      <h4 text-center>Please Choose only in the Month of February</h4>
+      <h1 text-center>PLEASE CHOOSE MOST DESIRED DATE</h1>
+      <!-- <h4 text-center>Please choose only in the month of February</h4> -->
+      <!-- <h4 text-center>Today is {{today}}</h4> -->
 
     </div>
 
     <ion-item>
-      <ion-datetime display-format="MMMM YYYY" min="2019" max="2019-02" [(ngModel)]="date"></ion-datetime>
+      <ion-datetime display-format="MMMM-YYYY" min="2019-02-12" max="2019-02" [(ngModel)]="date"></ion-datetime>
     </ion-item>
 
     <ion-row margin-top>
