--- a/src/pages/page4/page4.html
+++ b/src/pages/page4/page4.html
@@ -1,11 +1,11 @@
 <ion-content padding>
     <ion-grid>
       <ion-row>
-        <img src="../../assets/images/13.jpg" class="image" />
+        <img src="../../assets/images/32.jpg" class="image" />
       </ion-row>
 
       <div margin-top>
-        <h3 text-center>Would you still love me?</h3>
+        <h3 text-center>PWEDE BANG TAYO NALANG ULIT?</h3>
       </div>
 
       <ion-row text-center>
@@ -17,7 +17,6 @@
             type="button"
             color="danger"
             class="no-shadow capitalize btn-medium"
-            [disabled]="date == ''"
             (tap)="no()"
           >
             No
@@ -30,7 +29,6 @@
               type="button"
               color="danger"
               class="no-shadow capitalize btn-medium"
-              [disabled]="date == ''"
               (tap)="next()"
             >
               Yes
