--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -8,15 +8,16 @@
     </div>
 
     <ion-item>
-      <ion-datetime displayFormat="MMMM DD, YYYY - DDDD" min="2019-02-12" max="2019-02" [(ngModel)]="today"></ion-datetime>
+      <ion-datetime displayFormat="MMMM DD, YYYY - DDDD" min="2019-02-12" max="2019-02" placeholder="Please pick date" [(ngModel)]="today"></ion-datetime>
     </ion-item>
 
     <ion-row margin-top>
       <div col-12>
-        <button ion-button round type="button" color="danger" class="no-shadow capitalize btn-medium" (tap)="next()">
+        <button ion-button round type="button" color="danger" class="no-shadow capitalize btn-medium" [disabled]="today == null" (tap)="startAlert()">
           NEXT
         </button>
       </div>
+      {{today}}
     </ion-row>
 
   </ion-grid>
