--- a/src/pages/page3/page3.html
+++ b/src/pages/page3/page3.html
@@ -1,5 +1,5 @@
 <ion-content padding>
-  <ion-grid>
+  <ion-grid *ngIf="count != 14" >
     <div *ngIf="count == 1">
       <ion-row>
         <img src="../../assets/images/13.jpg" class="image" />
