fixed static images

--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -8,7 +8,7 @@
     </div>
 
     <ion-item>
-      <ion-datetime displayFormat="MMMM DD, YYYY - DDDD" min="2019-02-12" max="2019-02" placeholder="Please pick date" [(ngModel)]="today"></ion-datetime>
+      <ion-datetime text-center displayFormat="MMMM DD, YYYY - DDDD" min="2019-02-12" max="2019-02" placeholder="Please pick date" [(ngModel)]="today"></ion-datetime>
     </ion-item>
 
     <ion-row margin-top>
@@ -17,7 +17,7 @@
           NEXT
         </button>
       </div>
-      {{today}}
+      <!-- {{today}} -->
     </ion-row>
 
   </ion-grid>
