--- a/src/pages/page5/page5.html
+++ b/src/pages/page5/page5.html
@@ -48,10 +48,10 @@
           MAIINTDINIHAN KO NAMAN YUN AT HINDI NAMAN KITA MASISISI KUNG GANUN.
           BASTA ALWAYS REMEMBER NANDITO AKO LAGI NAGHIHINTAY SAYO. NEVER KITA
           SUSUKUAN HANGGANG HINDI NAWAWALA YUNG TAKOT MO. IPAPARAMDAM KO TALAGA
-          SAYO NA HINDI KANA DAPAT NATATAKOT BIG TIME! AKO YUNG LALALKING
+          SAYO NA HINDI KANA DAPAT NATATAKOT BIG TIME! AKO YUNG LALAKING
           MAGPAPAKITA SAYO NUN. JUST GIVE ME ANOTHER CHANCE TO PROVE YOU NA
           HINDI KANA DAPAT NATATAKOT. SO SANA MAGTIWALA AND HAVE HOPE DITO SA
-          PROPOSE KO. I WILL NEVER LEAVE YOU AGAIN BY. I WANT TO GROW OLD WITH
+          PROPOSAL KO. I WILL NEVER LEAVE YOU AGAIN BY. I WANT TO GROW OLD WITH
           YOU AND DIE OLD WITH YOU. I WILL GIVE AND SHOW MY BEST TO HAVE YOU
           BACK. I WANT TO START A NEW LIFE WITH YOU BY. FORGETTING THE PAST AND
           START SOMETHING NEW WITH YOU. DELETE NA NATIN YUNG MGA BAD MEMORIES
@@ -59,8 +59,8 @@
           AKO MAYAMAN PERO YUNG MAHALIN KA NG BUO AT IBIGAY SAYO ANG MGA NEEDS
           MO YUN ANG MAPAPANGAKO KONG KAYA KO IBIGAY SAYO NG BUO NG HINDI
           NAGDADALAWANG ISIP. SORRY SOBRANG HABA KULANG KULANG PA NGA ITO EH.
-          AND I AM HOPING FOR AN ANSWER BY. HINDI MAN NGAYON BUT SOMEDAY SOON. I
-          LOVE YOU BABY. TANDAAN MO YAN.
+          AND I AM HOPING FOR AN ANSWER BY. HINDI MAN NGAYON BUT SOMEDAY SOON.
+          LAKAS MAKA-WATTPAD NO? I LOVE YOU BABY ALWAYS. TANDAAN MO YAN.
         </h5>
       </div>
     </div>
