--- a/src/pages/page3/page3.html
+++ b/src/pages/page3/page3.html
@@ -2,7 +2,7 @@
   <ion-grid *ngIf="count != 14" >
     <div *ngIf="count == 1">
       <ion-row>
-        <img src="../../assets/images/13.jpg" class="image" />
+        <img src="assets/images/13.jpg" class="image" />
       </ion-row>
 
       <div margin-top>
@@ -13,7 +13,7 @@
     <div *ngIf="count == 2">
       <ion-row>
         <img
-          src="../../assets/images//16.jpeg"
+          src="assets/images/16.jpeg"
           class="image"
           style="height: 80vh;"
         />
@@ -26,7 +26,7 @@
 
     <div *ngIf="count == 3">
       <ion-row>
-        <img src="../../assets/images/22.jpg" class="image" />
+        <img src="assets/images/22.jpg" class="image" />
       </ion-row>
 
       <div margin-top>
@@ -38,7 +38,7 @@
 
     <div *ngIf="count == 4">
       <ion-row>
-        <img src="../../assets/images/27.jpeg" class="image" />
+        <img src="assets/images/27.jpeg" class="image" />
       </ion-row>
 
       <div margin-top>
@@ -52,7 +52,7 @@
     <div *ngIf="count == 5">
       <ion-row>
         <img
-          src="../../assets/images/33.jpeg"
+          src="assets/images/33.jpeg"
           class="image"
           style="height: 80vh;"
         />
@@ -65,7 +65,7 @@
 
     <div *ngIf="count == 6">
       <ion-row>
-        <img src="../../assets/images/29.jpeg" class="image" />
+        <img src="assets/images/29.jpeg" class="image" />
       </ion-row>
 
       <div margin-top>
@@ -78,7 +78,7 @@
 
     <div *ngIf="count == 7">
       <ion-row>
-        <img src="../../assets/images/37.jpeg" class="image" />
+        <img src="assets/images/37.jpeg" class="image" />
       </ion-row>
 
       <div margin-top>
@@ -89,7 +89,7 @@
     <div *ngIf="count == 8">
       <ion-row>
         <img
-          src="../../assets/images/47.jpg"
+          src="assets/images/47.jpg"
           class="image"
           style="height: 75vh"
         />
@@ -105,7 +105,7 @@
     <div *ngIf="count == 9">
       <ion-row>
         <img
-          src="../../assets/images/5.jpg"
+          src="assets/images/5.jpg"
           class="image"
           style="height: 75vh"
         />
@@ -119,7 +119,7 @@
     <div *ngIf="count == 10">
       <ion-row>
         <img
-          src="../../assets/images/3.jpg"
+          src="assets/images/3.jpg"
           class="image"
           style="height: 75vh"
         />
@@ -133,7 +133,7 @@
     <div *ngIf="count == 11">
       <ion-row>
         <img
-          src="../../assets/images/4.jpg"
+          src="assets/images/4.jpg"
           class="image"
           style="height: 75vh"
         />
@@ -147,7 +147,7 @@
     <div *ngIf="count == 12">
       <ion-row>
         <img
-          src="../../assets/images/45.jpeg"
+          src="assets/images/45.jpeg"
           class="image"
           style="height: 75vh"
         />
@@ -161,7 +161,7 @@
     <div *ngIf="count == 13">
       <ion-row>
         <img
-          src="../../assets/images/46.jpeg"
+          src="assets/images/46.jpeg"
           class="image"
           style="height: 75vh"
         />
