--- a/src/pages/page4/page4.html
+++ b/src/pages/page4/page4.html
@@ -1,8 +1,8 @@
-<ion-content padding>
-  <ion-grid *ngIf="count != 7" >
+<ion-content padding *ngIf="count != 7">
+  <ion-grid >
     <div *ngIf="count == 1">
       <ion-row>
-        <img src="assets/images/16.jpg" class="image" />
+        <img src="/assets/images/16.jpeg" class="image" />
       </ion-row>
 
       <div margin-top>
@@ -12,7 +12,7 @@
 
     <div *ngIf="count == 2">
       <ion-row>
-        <img src="assets/images/22.jpg" class="image" />
+        <img src="/assets/images/22.jpg" class="image" />
       </ion-row>
 
       <div margin-top>
@@ -22,7 +22,7 @@
 
     <div *ngIf="count == 3">
       <ion-row>
-        <img src="assets/images/6.JPEG" class="image" />
+        <img src="/assets/images/6.jpeg" class="image" />
       </ion-row>
 
       <div margin-top>
@@ -32,7 +32,7 @@
 
     <div *ngIf="count == 4">
       <ion-row>
-        <img src="assets/images/35.jpeg" class="image" />
+        <img src="/assets/images/35.jpeg" class="image" />
       </ion-row>
 
       <div margin-top>
@@ -42,17 +42,17 @@
 
     <div *ngIf="count == 5">
       <ion-row>
-        <img src="assets/images/18.jpeg" class="image" />
+        <img src="/assets/images/18.jpeg" class="image" />
       </ion-row>
 
       <div margin-top>
-        <h3 text-center>Pwede bang ikaw nalang makakasama kong tumanda?</h3>
+        <h3 text-center>Pwede bang ikaw nalang makasama kong tumanda?</h3>
       </div>
     </div>
 
     <div *ngIf="count == 6">
       <ion-row>
-        <img src="assets/images/2.jpg" class="image" />
+        <img src="/assets/images/2.jpg" class="image" />
       </ion-row>
 
       <div margin-top>
