--- a/src/pages/page5/page5.html
+++ b/src/pages/page5/page5.html
@@ -42,6 +42,19 @@
           sana maging unique yung proposal ko sayo. Sana nagustuhan mo ito. It's
           not much but its worth reading.
         </h5>
+
+        <h5 text-justify>
+          IF MAGIGING GIRLFRIEND KITA ULIT, ARAW-ARAW AT LAGI KONG SASABIHIN NA
+          KUNG GAANO KITA KAMAHAL. ANG GANDA MO BY BOTH INSIDE AND OUT. BIBIHIRA
+          NALANG AKO MAKAKILALA NG BABAENG TULAD MO. THIS WILL BE THE SECOND
+          TIME TO LOVE YOU AGAIN. SO PLEASE GIVE ME ANOTHER CHANCE TO LOVE YOU
+          AGAIN. HINDING HINDI KANA MAGSISISI SAKIN BY. YOU'RE TOO GOOD FOR ME
+          KAYA GUSTO KONG BUMALIK YUNG BBY KO SAKIN. GUSTO KONG IBALIK LAHAT NG
+          FAVORS NA NAGAWA MO SAKIN. I WANT TO LOVE YOU FOREVER, TO HAVE AND TO
+          HOLD, FOR RICHER, FOR POORER, IN SICKNESS AND IN HEALTH, UNTIL DEATHDO
+          US APART. THAT IS MY VOW TO YOU BY. I WILL ALWAYS BE WITH YOU AND WILL
+          ALWAYS LOVE YOU BABY.
+        </h5>
         <h5 text-justify>
           I WILL ALWAYS LOVE YOU BABY NO MATTER WHAT. I WON'T LEAVE YOU NO
           MATTER WHAT. I WILL STILL KEEP COMING KUNG HINDI KA PA TALAGA READY.
