--- a/src/pages/page6/page6.html
+++ b/src/pages/page6/page6.html
@@ -1,15 +1,49 @@
-<!--
-  Generated template for the Page6Page page.
+<ion-content padding >
+  <ion-grid >
+    <div >
+      <ion-row>
+        <img src="/assets/images/24.jpg" class="image" />
+      </ion-row>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-  <ion-navbar>
-    <ion-title>page6</ion-title>
-  </ion-navbar>
-</ion-header>
+      <div margin-top>
 
-<ion-content padding>
+        <h5 text-center>
+          I LOVE YOU
+        </h5>
+        <h5 text-center>
+          BABY, WILL YOU MAKE MY DREAM COME TRUE AND BE MY GIRLFRIEND?
+        </h5>
+      </div>
+    </div>
 
+
+
+
+    <ion-row text-center>
+      <div col-6>
+        <button
+          ion-button
+          round
+          type="button"
+          color="danger"
+          class="no-shadow capitalize btn-medium"
+          (tap)="no()"
+        >
+          No
+        </button>
+      </div>
+      <div col-6>
+        <button
+          ion-button
+          round
+          type="button"
+          color="danger"
+          class="no-shadow capitalize btn-medium"
+          (tap)="next()"
+        >
+          Yes
+        </button>
+      </div>
+    </ion-row>
+  </ion-grid>
 </ion-content>
