--- a/src/pages/page3/page3.html
+++ b/src/pages/page3/page3.html
@@ -13,9 +13,8 @@
     <div *ngIf="count == 2">
       <ion-row>
         <img
-          src="assets/images/16.jpeg"
+          src="assets/images/63.jpg"
           class="image"
-          style="height: 80vh;"
         />
       </ion-row>
 
@@ -52,13 +51,13 @@
     <div *ngIf="count == 5">
       <ion-row>
         <img
-          src="assets/images/33.jpeg"
+          src="assets/images/62.jpeg"
           class="image"
-          style="height: 80vh;"
+          style="height: auto; width: auto"
         />
       </ion-row>
 
-      <div margin-top>
+      <div>
         <h5 text-center>Mahal kita kasi ayaw na kitang mawala ulit</h5>
       </div>
     </div>
@@ -78,7 +77,7 @@
 
     <div *ngIf="count == 7">
       <ion-row>
-        <img src="assets/images/37.jpeg" class="image" />
+        <img src="assets/images/58.jpg" class="image" />
       </ion-row>
 
       <div margin-top>
@@ -91,7 +90,6 @@
         <img
           src="assets/images/47.jpg"
           class="image"
-          style="height: 75vh"
         />
       </ion-row>
 
@@ -107,7 +105,6 @@
         <img
           src="assets/images/5.jpg"
           class="image"
-          style="height: 75vh"
         />
       </ion-row>
 
@@ -121,7 +118,6 @@
         <img
           src="assets/images/3.jpg"
           class="image"
-          style="height: 75vh"
         />
       </ion-row>
 
@@ -135,7 +131,6 @@
         <img
           src="assets/images/4.jpg"
           class="image"
-          style="height: 75vh"
         />
       </ion-row>
 
@@ -149,7 +144,6 @@
         <img
           src="assets/images/45.jpeg"
           class="image"
-          style="height: 75vh"
         />
       </ion-row>
 
@@ -163,7 +157,6 @@
         <img
           src="assets/images/46.jpeg"
           class="image"
-          style="height: 75vh"
         />
       </ion-row>
 
