--- a/src/pages/page4/page4.html
+++ b/src/pages/page4/page4.html
@@ -2,7 +2,7 @@
   <ion-grid >
     <div *ngIf="count == 1">
       <ion-row>
-        <img src="/assets/images/16.jpeg" class="image" />
+        <img src="/assets/images/57.jpg" class="image" />
       </ion-row>
 
       <div margin-top>
@@ -22,7 +22,7 @@
 
     <div *ngIf="count == 3">
       <ion-row>
-        <img src="/assets/images/6.jpeg" class="image" />
+        <img src="/assets/images/60.jpeg" class="image" />
       </ion-row>
 
       <div margin-top>
@@ -42,7 +42,7 @@
 
     <div *ngIf="count == 5">
       <ion-row>
-        <img src="/assets/images/18.jpeg" class="image" />
+        <img src="/assets/images/53.jpg" class="image" />
       </ion-row>
 
       <div margin-top>
