--- a/src/pages/page5/page5.html
+++ b/src/pages/page5/page5.html
@@ -51,9 +51,10 @@
           AGAIN. HINDING HINDI KANA MAGSISISI SAKIN BY. YOU'RE TOO GOOD FOR ME
           KAYA GUSTO KONG BUMALIK YUNG BBY KO SAKIN. GUSTO KONG IBALIK LAHAT NG
           FAVORS NA NAGAWA MO SAKIN. I WANT TO LOVE YOU FOREVER, TO HAVE AND TO
-          HOLD, FOR RICHER, FOR POORER, IN SICKNESS AND IN HEALTH, UNTIL DEATHDO
-          US APART. THAT IS MY VOW TO YOU BY. I WILL ALWAYS BE WITH YOU AND WILL
-          ALWAYS LOVE YOU BABY.
+          HOLD, FOR RICHER, FOR POORER, IN SICKNESS AND IN HEALTH, UNTIL DEATH
+          DO US APART. THAT IS MY VOW TO YOU BY. I WILL ALWAYS BE WITH YOU AND
+          WILL ALWAYS LOVE YOU BABY. PLEASE STAY BESIDE MY BIBI. PLEASE DON'T
+          LEAVE ME HANGING.
         </h5>
         <h5 text-justify>
           I WILL ALWAYS LOVE YOU BABY NO MATTER WHAT. I WON'T LEAVE YOU NO
