--- a/src/pages/page6/page6.html
+++ b/src/pages/page6/page6.html
@@ -1,23 +1,19 @@
-<ion-content padding >
-  <ion-grid >
-    <div >
-      <ion-row>
-        <img src="/assets/images/24.jpg" class="image" />
+<ion-content padding>
+  <ion-grid>
+    <div>
+      <ion-row class="img-container">
+        <img src="/assets/images/62.jpeg" class="image" />
       </ion-row>
 
       <div margin-top>
-
-        <h5 text-center>
-          I LOVE YOU
-        </h5>
-        <h5 text-center>
+        <h6 text-center>
+          I LOVE YOU BABY
+        </h6>
+        <h6 text-center>
           BABY, WILL YOU MAKE MY DREAM COME TRUE AND BE MY GIRLFRIEND?
-        </h5>
+        </h6>
       </div>
     </div>
-
-
-
 
     <ion-row text-center>
       <div col-6>
@@ -43,6 +39,14 @@
         >
           Yes
         </button>
+      </div>
+      <div text-center>
+        <label text-center>
+          IF YES, KISS OR HUG ME OR HOLD ME SO TIGHT AS IF I AM ABOUT TO DIE.
+        </label><br><br>
+        <label text-center>
+          IF NO, LOOK DOWN AND DO NOTHING.
+        </label>
       </div>
     </ion-row>
   </ion-grid>
