--- a/src/pages/page7/page7.html
+++ b/src/pages/page7/page7.html
@@ -1,15 +1,20 @@
-<!--
-  Generated template for the Page7Page page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-  <ion-navbar>
-    <ion-title>page7</ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
+  <ion-grid>
+    <div>
+      <ion-row class="img-container" (press)="next()">
+        <img src="/assets/images/62.jpeg" class="image" />
+      </ion-row>
 
+      <div margin-top>
+        <h6 text-center style="font-size: 20pt; font-family: cursive">
+          CONGRATULATIONS!
+        </h6>
+        <h4 text-center>This marks {{ date }} as your official monthsary.</h4>
+      </div>
+    </div>
+
+    <div text-center class="bottom">
+      <h1>CARMINA <small>x</small> JAJA</h1>
+    </div>
+  </ion-grid>
 </ion-content>
