--- a/src/pages/page6/page6.html
+++ b/src/pages/page6/page6.html
@@ -10,7 +10,7 @@
           I LOVE YOU BABY
         </h6>
         <h6 text-center>
-          BABY, WILL YOU MAKE MY DREAM COME TRUE AND BE MY GIRLFRIEND?
+          BABY, WILL YOU MAKE MY DREAM COME TRUE AND BE MY GIRLFRIEND AGAIN?
         </h6>
       </div>
     </div>
@@ -45,7 +45,10 @@
           IF YES, KISS OR HUG ME OR HOLD ME SO TIGHT AS IF I AM ABOUT TO DIE.
         </label><br><br>
         <label text-center>
-          IF NO, LOOK DOWN AND DO NOTHING.
+          IF NO, LOOK DOWN AND DO NOTHING AND I WILL LEAVE. WAG KANA MAGPAPARAMDAM SA AKIN.
+        </label><br><br>
+        <label text-center>
+          P.S. MARUPOK AKO
         </label>
       </div>
     </ion-row>
