--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
     </div>
     <!-- <h3 for="" margin-left text-center text-justify style="font-family: 'Courier New', Courier, monospace; text-decoration: underline">PROPOSAL</h3> -->
 
-    <img src="/assets/images/51.JPG" class="image" />
+    <img src="assets/images/51.JPG" class="image" />
   </ion-row>
 
   <ion-row text-center padding>
